8235690: [nestmates] InstanceKlass::signature_name returns incorrect hidden class name

Add needed name mangling for hidden classes so right name gets returned

Reviewed-by: sspitsyn